complete/nodePort-service-deployment-7080.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo7080
spec:
  ports:
  - name: 7080-7080
    port: 7080
    protocol: TCP
    nodePort: 30001
  type: NodePort
  selector:
    app: demo
status:
  loadBalancer: {}
