complete/nodePort-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    nodePort: 30001
  type: NodePort
  selector:
    app: demo
status:
  loadBalancer: {}
