complete/service-deployment-together.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo
spec:
  selector:
    app: demo
    tier: backend
  ports:
  - protocol: TCP
    port: 7080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  selector:
      matchLabels:
        app: demo
        tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: demo
        tier: backend
    spec:
      containers:
        - name: demo
          image: gregqiuspringdemo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7080
